--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,17 +1,31 @@
-
-<h2>Signup</h2>
+<div class="signup-page" id=""Signup-form>
+<h2>Sign up</h2>
 <form (ngSubmit)="onSignup(signupForm)" #signupForm="ngForm">
-  <input name="username" [(ngModel)]="user.username" placeholder="Username" required><br>
+
+
   <input name="name" [(ngModel)]="user.name" placeholder="Full Name" required><br>
+  
+  <input name="username" [(ngModel)]="user.username" placeholder="Username" required><br>
+
   <input name="email" [(ngModel)]="user.email" placeholder="Email" type="email" required><br>
+
   <input name="password" [(ngModel)]="user.password" placeholder="Password" type="password" required><br>
+
   <input type="text" name="phone" [(ngModel)]="user.phone" required pattern="[0-9]{10}" placeholder="Phone" />
 
   <select name="role" [(ngModel)]="user.role" required>
+    <option value="" disabled selected>Select Role</option>
     <option value="USER">User</option>
     <option value="ADMIN">Admin</option>
-    <option value="SELLER">Seller</option>
+    <option value="SELLER">Seller</option>  
 
   </select><br>
-  <button type="submit">Signup</button>
+  <button type="submit">Register</button>
+
+  <div class="login-link">
+    <p>Click here to- <a routerLink="/login">Login</a></p>
+
+  </div>
 </form>
+
+</div>
